--- a/services/web/requirements.txt
+++ b/services/web/requirements.txt
@@ -1,4 +1,5 @@
-Flask==3.0.3
-gunicorn==22.0.0
-google-cloud-storage>=2.16.0
-google-auth
+Flask==3.0.0
+gunicorn==21.2.0
+google-cloud-storage==2.18.0
+google-auth==2.35.0
+requests>=2.31.0   
